deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-http
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <URL_DOMAIN> # Dns name, example: vaultwarden.domain.com
      secretName: vaultwarden-tls
  rules:
    - host: <URL_DOMAIN> # Dns name, example: vaultwarden.domain.com
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            path: /
            pathType: Prefix
